@@ -142,21 +142,25 @@ General syntax:
 General commands:
 
     <dir>......................Move in that direction
+    A)ttack-<dir>..............Initiate combat
     B)oard.....................Board/exit a vehicle like a ship or horse
     C)ast-<member>-<spell>-<*>...Cast a spell (the last argument depends on the
-                                 spell)
+                               spell)
     E)nter.....................Enter a portal, including up or down ladders
     F)ire-<dir>................Fire vehicle's weapon (e.g., ship cannon)
     G)et-<dir>.................Get an object from the ground
     H)andle-<member>-<target>..Activate a switch or lever
     L)ook-<dir>................Describe an adjacent tile
+    N)ew-order-<member>-<member>...Swap order of two party members
     O)pen-<dir>................Open a container or door
     Q)uit......................Quits the game
     R)eady-<member>-<item>.....Ready an armament like a weapon, shield, etc.
-    S)witch-<member>-<member>...Swap order of two party members
+    S)earch-<dir>..............Look carefully
     T)alk-<target>.............Talk to an NPC
     U)se-<member>-<item>.......Use an item like a torch or potion
+    X)amine-<target>...........Examine map files within view
     Z)tats.....................Show party stats like inventory, armaments, etc
+    @)AT.......................Information about where the party is AT, etc
     <space>....................Pass one turn
 
 
