@@ -2,6 +2,12 @@ Changes between nazghul-0.1.2 and nazghul-0.1.3
 
 gmcnutt:
 
+o Added a S)earch command which will reveal things on adjacent tiles that are
+  normally only visible with a Reveal spell
+
+o Reformatted the in-game users guide for better readability and use of screen
+  space
+
 o Added a quantity field for placed items. The arrows, bolts and rocks in the
   terrain test map provide a sample usage.
 
@@ -35,9 +41,9 @@ o Added the create_npc_party api call for same. This creates npc parties and
 o Added a new engine-supported mech signal: MECH_TURN, which is delivered every
   turn to every mechanism within the player's current place.
 
-o Added some new mechanism macros in the examples to test the new
-  constructs. See the wilderness, the slime cave and Green Tower for example
-  usage.
+o Added some new mechanism macros in the examples to test the new create_object
+  and create_npc_party constructs. See the wilderness, the slime cave and Green
+  Tower for example usage.
 
 o Added a ^z for map editing. This toggles map zooming.
 
